--- a/index.html
+++ b/index.html
@@ -83,14 +83,30 @@
             </div>
         </div>
     </div>
+
+    <div class="botlle">
+        <div class="container">
+            <div class="bottle_inner">
+                <a href="pages/monster.html">
+                    <div class="bowl">
+                        <div class="shadow"></div>
+                        <div class="liquid"></div>
+
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
     <div class="block_video">
         <div class="container">
             <h3>Полезный ролик про Event Loop</h3>
             <div class="inner_block_video">
-                <iframe width="80%" height="450" src="https://www.youtube.com/embed/zDlg64fsQow" title="YouTube video player" frameborder="2" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<!--                <iframe width="80%" height="450" src="https://www.youtube.com/embed/zDlg64fsQow" title="YouTube video player" frameborder="2" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>-->
             </div>
         </div>
     </div>
+
     <div class="footer">
         <div class="container">
             <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
@@ -108,15 +124,16 @@
             <form action="#">
                 <div class="modal_close">&times;</div>
                 <div class="modal_title">Мы свяжемся с вами как можно быстрее!</div>
-                <input required placeholder="Ваше имя" name="name" type="text" class="modal_input">
-                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal_input">
+<!--                <input required placeholder="Ваше имя" name="fullname" type="text" class="modal_input">-->
+<!--                <input required placeholder="Ваш номер телефона" name="phone_number" type="phone" class="modal_input">-->
                 <button class="btn btn_dark btn_min">Перезвонить мне</button>
             </form>
         </div>
     </div>
 </div>
-
-</body>
+<h1 id="counter">0</h1>
 <script src="js/main.js"></script>
 <script src="js/modal.js"></script>
+<script src="js/home_works.js"></script>
+</body>
 </html>
